--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "clean:ios": "cd ios && xcodebuild clean && cd ..",
+    "clean:android": "cd android && ./gradlew clean && cd .."
   },
   "dependencies": {
     "react": "16.8.3",
